--- a/profiles/style.css
+++ b/profiles/style.css
@@ -29,9 +29,11 @@ body {
  object-fit: cover;
  position: absolute;
  top: 60px;
- left: 50%;
+ left: 0; /* Changed from 50% to 0 */
  transform: translateX(-50%);
+ border: 4px solid black; /* Added this line */
 }
+
 .username {
  color: #ffffff;
  margin: 10px 0;
