--- a/profiles/style.css
+++ b/profiles/style.css
@@ -11,9 +11,9 @@ body {
 }
 .profile-card {
  background-color: #2f3136;
- border-radius: 10px;
- padding: 20px;
- width: 300px;
+ border-radius: 16px;
+ padding: 32px;
+ width: 600px;
  position: relative;
 }
 .profile-banner {
@@ -23,20 +23,20 @@ body {
  border-radius: 10px 10px 0 0;
 }
 .profile-pic {
- width: 100px;
- height: 100px;
+ width: 120px;
+ height: 120px;
  border-radius: 50%;
  object-fit: cover;
  position: absolute;
  top: 60px;
- left: 0; /* Changed from 50% to 0 */
+ left: 20%; /* Changed from 50% to 0 */
  transform: translateX(-50%);
  border: 4px solid black; /* Added this line */
 }
 
 .username {
  color: #ffffff;
- margin: 10px 0;
+ margin: 32px 0;
 }
 .description {
  color: #b9bbbe;
